--- a/app/src/main/res/drawable/rectangle_bg.xml
+++ b/app/src/main/res/drawable/rectangle_bg.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle"><size android:height="250dp"/>
             <corners android:bottomLeftRadius="200dp" android:bottomRightRadius="200dp"/>
-            <solid android:color="@color/bg"/>
+            <solid android:color="@color/darkBlue"/>
         </shape>
     </item>
 </selector>
