--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,8 +31,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="270dp"
-        android:layout_height="61dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,8 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans_light"
             android:text="Welcome to "
-            android:textSize="30dp" />
+            android:textColor="@color/darkBlue"
+            android:textSize="30sp" />
 
         <TextView
             android:id="@+id/textView3"
@@ -53,38 +54,76 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/open_sans_light"
             android:text="Roxio"
-            android:textSize="30dp"
+            android:textColor="@color/darkBlue"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <EditText
-        android:id="@+id/editTextPhone"
-        android:layout_width="302dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="16dp"
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="363dp"
+        android:layout_height="65dp"
+        android:layout_margin="10dp"
         android:background="@drawable/phone_bg"
-        android:ems="10"
-        android:inputType="phone"
-        android:maxLength="7"
-        android:paddingLeft="10dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="302dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/splash_btn_bg"
-        android:fontFamily="@font/open_sans_light"
-        android:text="Get Started"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/editTextPhone"
-        app:layout_constraintStart_toStartOf="@+id/editTextPhone"
-        app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
-        android:onClick="on_Click"/>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="71dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:fontFamily="@font/open_sans_light"
+            android:gravity="center"
+            android:text="+90"
+            android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/editTextPhone"
+            android:layout_width="279dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:ems="7"
+            android:hint="987 65 43"
+            android:inputType="phone"
+            android:maxLength="10"
+            android:paddingLeft="10dp"
+            android:textColorHint="@color/hint"
+            android:textSize="18sp">
+            <requestFocus/>
+        </EditText>
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
+
+        <Button
+            android:id="@+id/getOtp"
+            android:layout_width="302dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/splash_btn_bg"
+            android:fontFamily="@font/open_sans_light"
+            android:text="Get Started"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:visibility="gone" />
+    </FrameLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
