--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,12 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="bg">#0D1723</color>
-    <color name="textColor">#1FCD6C</color>
+    <color name="darkBlue">#0D1724</color>
+    <color name="green">#1FCD6C</color>
     <color name="rox">#545C66</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="phone_bg">#CFD1D3</color>
+    <color name="hint">#CFD1D3</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
